added bootstrap content to style form sign up and log in

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,6 +20,6 @@
 
 
   <div class="footer-copyright">
-    &copy; 2018 Nsemble. <i class="fa fa-heart"></i>
+    &copy; 2018 Nsemble. All rights reserved <i class="fa fa-heart"></i>
   </div>
 </div>
