Views and controller for Project set

--- a/app/views/projects/_search_bar.html.erb
+++ b/app/views/projects/_search_bar.html.erb
@@ -4,5 +4,5 @@
     class: "form-control form-control-lg",
       placeholder: "Search"
       %>
-  <%= submit_tag "Find a plan", class: "btn btn-primary" %>
+  <%= submit_tag "Find a project", class: "btn btn-primary" %>
 <% end %>
