--- a/app/views/projects/_cards.html.erb
+++ b/app/views/projects/_cards.html.erb
@@ -1,17 +1,17 @@
 
 <div class="container">
   <div class="row">
-    <% @plans.each do |plan| %>
+    <% @projects.each do |project| %>
       <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(plan.picture)%>');">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(project.picture)%>');">
           <div class="card-category">*****</div>
           <div class="card-description">
-            <h2><%= plan[:title] %></h2>
+            <h2><%= project[:title] %></h2>
             <p>Very cool city, the best</p>
           </div>
           <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
           <%#= cl_image_tag ...photo, class: "card-user" %>
-          <%= link_to "#", plan_path(plan), class: "card-link" %>
+          <%= link_to "#", project_path(project), class: "card-link" %>
         </div>
       </div>
     <% end %>
