--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,18 +1,18 @@
-<h1 class="text-center">This are the plans that you can enjoy:
+<h1 class="text-center">This are the projects that you can enjoy:
 </h1>
 
 
 
 
-<%= render 'plans/cards' %>
+<%= render 'projects/cards' %>
 
-<div
+<!-- <div
   id="map"
   style="width: 100%;
   height: 600px;"
   data-markers="<%= @markers.to_json %>"
 ></div>
-
+ -->
 
 
 
