--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,9 +1,9 @@
 
 <!-- Header with Background Image -->
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@plan.picture) %>');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>');">
   <div class="banner-content">
-    <h1><%= @plan[:title] %></h1>
+    <h1><%= @project[:title] %></h1>
   </div>
 </div>
 
@@ -14,27 +14,27 @@
    <div class="col-sm-4">
     <h2 class="mt-4">Summary:</h2>
     <ul>
-      <li>Location: <%= @plan[:location] %></li>
+      <li>Location: <%= @project[:location] %></li>
       <li>Duration: 2h</li>
-      <li>Price: <%= @plan[:price] %></li>
+      <li>Price: <%= @project[:price] %></li>
       <li>Review in stars</li>
     </ul>
 
   </div>
   <div class="col-sm-8">
     <h2 class="mt-4">Description:</h2>
-    <p><%= @plan[:description] %></p>
+    <p><%= @project[:description] %></p>
 
-      <% if current_user = @plan.user %>
+      <% if current_user = @project.user %>
     <p>
-      <%= link_to "Edit", edit_plan_path(@plan), class: "btn btn-primary btn-lg" %>
-      <%= link_to "Delete", plan_path(@plan), class: "btn btn-primary btn-lg", method: :delete,
+      <%= link_to "Edit", edit_project_path(@project), class: "btn btn-primary btn-lg" %>
+      <%= link_to "Delete", project_path(@project), class: "btn btn-primary btn-lg", method: :delete,
         data: { confirm: "Are you sure?" } %></p>
       <% else %>
-        <p><%= link_to "Book Now", new_plan_booking_path(@plan) , class: "btn btn-primary btn-lg" %></p>
+        <p><%= link_to "Book Now", new_project_booking_path(@project) , class: "btn btn-primary btn-lg" %></p>
 
       <% end %>
-      <p><%= link_to "Back to plans", plans_path %></p>
+      <p><%= link_to "Back to projects", projects_path %></p>
 
       </div>
 
