--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,24 +15,16 @@
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
 
     <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :city %>
 
+    <%= f.input :about %>
 
 
     <%= f.input :avatar %>
     <%= f.input :avatar_cache, as: :hidden %>
     <%#= f.select :instrument, options_for_select(%w[Mike Nick Jason Tim]) %>
     <%#= f.input :instrument, :collection => %w[Mike Nick Jason Tim] %>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
