--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag plans_path, method: :get, class: "form-inline" do%>
+<%= form_tag musicians_path, method: :get, class: "form-inline" do%>
   <%= text_field_tag :query,
     params[:query],
     class: "form-control form-control-lg",
