--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,4 +1,4 @@
- <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+ <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
 
       <div class="form-inputs">
@@ -8,14 +8,14 @@
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
         <% end %>
 
-        <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-        <%= f.input :password_confirmation, required: false %>
-        <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+        <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: true %>
+        <%= f.input :password_confirmation, required: true %>
+        <%#= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
 
         <%= f.input :first_name %>
         <%= f.input :last_name %>
         <%= f.input :city %>
-        <%#= f.input :country %>
+        <%= f.input :country %>
 
         <%= f.input :about %>
 
@@ -30,6 +30,6 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Update" %>
+        <%= f.button :submit, "Sign Up" %>
       </div>
       <% end %>
