--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,33 @@
     <div class="form-container col-xs-12 col-sm-6 col-sm-offset-3">
       <h2>Sign up</h2>
 
-      <%= render 'form' %>
+   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true %>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: true %>
+        <%= f.input :password_confirmation, required: true %>
+        <%#= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+
+
+        <%#= f.select :instrument, options_for_select(%w[Mike Nick Jason Tim]) %>
+        <%#= f.input :instrument, :collection => %w[Mike Nick Jason Tim] %>
+
+
+
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Sign Up" %>
+      </div>
+      <% end %>
+
       <%= render "devise/shared/links" %>
 
 
