added css in home page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="logo">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", height: 50 %>
+      <%= image_tag "logo_nsemble_editable.png", height: 50 %>
     <% end %>
   </div>
   <div class="footer-links ">
@@ -20,6 +20,6 @@
 
 
   <div class="footer-copyright">
-    &copy; 2018 Nsemble. All rights reserved <i class="fa fa-heart"></i>
+    &copy; 2018 Nsemble. All rights reserved.
   </div>
 </div>
