--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-  background: #1f7a8c;
+  background: #3c4858;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 200px;
   padding: 100px 50px;
   color: rgba(0,0,0,0.4);
 
@@ -13,13 +13,13 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.4;
+  color: #d3d0cb;
+
   text-decoration: none;
   padding: 0px 10px;
 }
 .footer-links a:hover {
-  color: #fca311;
+  color: #ef4343;
   opacity: 1;
 }
 .footer-links li {
@@ -27,9 +27,7 @@
   list-style:none;
 
 }
-.footer .fa-heart {
-  color: rgba(0,0,0,0.4)
-}
+
 .fab{
   font-size: 30px;
   margin: 10px;
