--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,7 +11,8 @@ $font-size-base: 18px;
 
 // Colors
 $gray-base:       $gray;
-$brand-primary:   $blue;
+// $brand-primary:   $blue;
+$brand-primary:   #ef4343;
 $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
