--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,52 @@
+// // Specific CSS for your home-page
+// input[type=text] {
+//     width: 130px;
+//     -webkit-transition: width 0.4s ease-in-out;
+//     transition: width 0.4s ease-in-out;
+// }
+
+// /* When the input field gets focus, change its width to 100% */
+// input[type=text]:focus {
+//     width: 100%;
+// }
+
+
+
+// the code bellow is of the cards plannea (Almu)
+
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic);
+
+
+.heading-title {
+    margin-bottom: 70px;
+    margin-top: 70px
+}
+// .img-responsive{
+// width: 200px;
+// margin-right: 0;
+// }
+
+.team-member, .team-member .team-img {
+    position: relative;
+}
+
+.team-title {
+    // position: static;
+    padding: 20px 0;
+    display: inline-block;
+    letter-spacing: 2px;
+    width: 100%;
+}
+.team-title h5 {
+
+    display: block;
+    text-transform: uppercase;
+    margin: auto;
+}
+.team-title span {
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #a5a5a5;
+    letter-spacing: 1px;
+}
 // Specific CSS for your home-page
