--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,8 +1,8 @@
 <div class="banner" >
-  <div class='slide1' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("pexels-photo-896783.jpeg") %>');">
+  <div class='slide1' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("photo-band.png") %>');">
   </div>
 
-  <div class='slide2' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("pexels-photo-390403.jpeg") %>');">
+  <div class='slide2' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("photo-singer.jpeg") %>');">
   </div>
 
   <div class='slide3' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),  url('<%= asset_path("pexels-photo-669004.jpeg") %>');">
@@ -11,7 +11,7 @@
   <div class="banner-content">
     <h1>Connecting musicians</h1>
     <p>This text has to be change</p>
-    <%#= link_to "Book a plan", plans_path , class: "btn btn-primary btn-lg" %>
+
       <%= render 'shared/search_bar' %>
 
   <!-- aqui va el codigo que he pegado en _search_bar -->
@@ -20,3 +20,6 @@
 
 
 </div>
+
+
+
