--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,1 +1,17 @@
 <h1>HELLO</h1>
+
+
+<ul>
+      <li><%= @musician[:first_name] %><%= @musician[:last_name] %></li>
+      <li> <%= @musician[:about] %></li>
+      <li> <%= @musician[:media] %></li>
+      <li> <%= @musician[:city] %></li>
+      <li> <%= @musician[:country] %></li>
+      <li> <%= @musician[:genre] %></li>
+      <li> <%= @musician[:instrument] %></li>
+      <li> <%= @musician[:level] %></li>
+      <li> <%= @musician[:avatar] %></li>
+      <li> <%= @musician[:banner] %></li>
+      <!-- <li><%= cl_image_path(@musician.avatar) %></li> -->
+
+    </ul>
