editing profile view

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,6 +24,9 @@
         <%= f.input :country %>
 
         <%= f.input :about, as: :text %>
+        <%#= f.input :instrument %>
+        <%#= f.input :level %>
+        <%#= f.input :genre %>
 
 
 
@@ -32,6 +35,8 @@
 
         <%= f.input :banner %>
         <%= f.input :banner_cache, as: :hidden %>
+
+
         <%#= f.select :instrument, options_for_select(%w[Mike Nick Jason Tim]) %>
         <%#= f.input :instrument, :collection => %w[Mike Nick Jason Tim] %>
 
