styling user profile

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,9 +24,9 @@
         <%= f.input :country %>
 
         <%= f.input :about, as: :text %>
-        <%#= f.input :instrument %>
-        <%#= f.input :level %>
-        <%#= f.input :genre %>
+        <%= f.input :instrument %>
+        <%= f.input :level %>
+        <%= f.input :genre %>
 
 
 
