--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Connections#index</h1>
 <!-- <p>Find me in app/views/connections/index.html.erb</p> -->
 
@@ -12,4 +13,6 @@
 
 <% @pending_connections.each do |pending_connection|%>
  <p><%= pending_connection.first_name %> <%= pending_connection.last_name %></p>
+ <p><%= link_to "Accept connection", accept_musician_path(pending_connection) , class: "btn btn-primary btn-lg" %></p>
 <% end %>
+
