--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,7 +5,7 @@
   <div class='slide2' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("photo-singer.jpeg") %>');">
   </div>
 
-  <div class='slide3' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),  url('<%= asset_path("pexels-photo-669004.jpeg") %>');">
+  <div class='slide3' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),  url('<%= asset_path("concert.png") %>');">
   </div>
 
   <div class="banner-content">
