--- a/app/views/musicians/_cards.html.erb
+++ b/app/views/musicians/_cards.html.erb
@@ -4,10 +4,10 @@
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(musician.avatar)%>');">
           <div class="card-description">
-            <h2><%= musician[:name] %></h2>
-            <p>Very cool city, the best</p>
+            <h2><%= musician.first_name + " " + musician.last_name %></h2>
+            <p><%= musician.instrument %></p>
           </div>
-          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+
           <%#= cl_image_tag ...photo, class: "card-user" %>
           <%= link_to "#", musician_path(musician), class: "card-link" %>
         </div>
