--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 
 <!-- Header with Background Image -->
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
+<div class="banner banner-profile" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
   <div class="banner-content">
     <h1><%= @project[:title] %></h1>
   </div>
@@ -27,7 +27,7 @@
     <h2 class="mt-4">We are:</h2>
     <ul>
       <%= link_to musician_path(@project.user) do  %>
-      <li><%= cl_image_tag(@project.user.avatar) %></li>
+      <li ><%= cl_image_tag(@project.user.avatar) %></li>
       <% end %>
 
     </ul>
