created users seeds

--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -12,4 +12,7 @@
 
 <% @pending_connections.each do |pending_connection|%>
  <p><%= pending_connection.first_name %> <%= pending_connection.last_name %></p>
-<% end %>
+<p><%= pending_connection.first_name %></p>
+<p><%= link_to "Accept connection", accept_musician_path(pending_connection) , class: "btn btn-primary btn-lg" %></p>
+<%end%>
+
