changed links in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,24 +17,26 @@
 
 
       <!-- Links when logged in -->
-      <%#= link_to "Make a plan", new_plan_path, class: "navbar-wagon-item navbar-wagon-link" %>
-
-      <%#= link_to "My plans", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-
-      <%#= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-
-
-
+      <%= link_to "Log out", destroy_user_session_path,class: "navbar-wagon-item navbar-wagon-link",  method: :delete %>
 
 
 
       <%= link_to "Create a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Connection requests: #{current_user.pending_friends.length}", connections_path, class: "navbar-wagon-item navbar-wagon-link"%>
+
+
+
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag (current_user.avatar || "http://kitt.lewagon.com/placeholder/users/ssaunier"), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%#= image_tag (current_user.avatar), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+
+            <%= link_to musician_path(current_user) do  %>
+                <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbar-wagon-menu" %>
+            <% end %>
+
+
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to "#" do %>
@@ -46,11 +48,7 @@
                 <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
               <% end %>
             </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
+
           </ul>
         </div>
       </div>
