--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -7,7 +7,7 @@
   <%= text_field_tag :location,
     params[:query],
     class: "form-control form-control-lg",
-      placeholder: "Where? ex: Amsterdam"
+      placeholder: "Ex: Amsterdam"
       %>
   <%= submit_tag "Find", class: "btn btn-primary" %>
 <% end %>
