--- a/app/assets/stylesheets/musicians/_show.scss
+++ b/app/assets/stylesheets/musicians/_show.scss
@@ -1,5 +1,15 @@
 .banner-profile{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: left;
   height: 400px
 }
 
+.avatar-profile{
+  background: none;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  border-radius: 50%;
+}
 
