--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,13 +1,13 @@
 
 
 <!-- Header with Background Image -->
-
+<div>
 <div class="banner banner-profile" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@musician.banner) %>');">
   <%#= @musician[:banner] %>
-  <%= cl_image_tag @musician.avatar, height: 200, width: 200,  radius: 0 %>
+  <%= cl_image_tag @musician.avatar, height: 200, width: 200,  crop: :thumb,  class: "avatar-profile" %>
 </div>
 
-
+</div>
 
 
 
