--- a/app/views/projects/_cards.html.erb
+++ b/app/views/projects/_cards.html.erb
@@ -4,13 +4,14 @@
     <% @projects.each do |project| %>
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(project.picture)%>');">
-          <div class="card-category">*****</div>
+
           <div class="card-description">
-            <h2><%= project[:title] %></h2>
-            <p>Very cool city, the best</p>
+            <h2><%= project.title.capitalize %></h2>
+            <p><%= project.location %></p>
           </div>
-          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-          <%#= cl_image_tag ...photo, class: "card-user" %>
+          <img class="card-user" src="">
+          <%#= cl_image_tag @project.user.avatar, width: 100, height: 100, crop: :fill , class:"card-user"%>
+
           <%= link_to "#", project_path(project), class: "card-link" %>
         </div>
       </div>
@@ -24,3 +25,9 @@
 
 
 
+<!-- <%#= link_to musician_path(@project.user) do  %>
+      <li ><%#= cl_image_tag @project.user.avatar, width: 100, height: 100, crop: :fill , class: "participant"  %>
+
+      </li>
+      <%# end %>
+ -->
