changed pictures in home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,76 @@
 
 <%= render 'shared/banner' %>
 <div class="container">
-   <div class="row">
+   <!-- <div class="row">
 
-      <%= image_tag "image_gitar_background.jpg", class: "img-responsive" %>
+      <%#= image_tag "image_gitar_background.jpg", class: "img-responsive" %>
 
-  </div>
+  </div> -->
 </div>
 
 
-<!-- code for planners/pictures -->
+<!-- code for projects -->
 <div class="container">
   <div class="row">
     <div class="heading-title text-center">
-      <h3 class="text-uppercase">Book a plan with a local around the world </h3>
+      <h3 class="text-uppercase">Join to different music projects </h3>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "4-piano-performance.jpg", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>Amsterdam</h5>
+
+      </div>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "2-guitar-performance", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>Madrid</h5>
+
+      </div>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "3-saxo-performance", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>Amsterdam</h5>
+
+      </div>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "4-piano-performance.jpg", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>China</h5>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!--  musicians -->
+
+<div class="container">
+  <div class="row">
+    <div class="heading-title text-center">
+      <h3 class="text-uppercase">Connect with other musicians to play with </h3>
     </div>
 
     <div class="col-md-3 col-sm-3">
@@ -24,7 +81,7 @@
       </div>
       <div class="team-title">
         <h5>Almudena</h5>
-        <span>Planner in Madrid</span>
+        <span>Singer</span>
       </div>
     </div>
 
@@ -36,7 +93,7 @@
       </div>
       <div class="team-title">
         <h5>Aron</h5>
-        <span>Planner in Roma</span>
+        <span>Drumm</span>
       </div>
     </div>
 
@@ -48,7 +105,7 @@
       </div>
       <div class="team-title">
         <h5>Nadia</h5>
-        <span>Planner in Amsterdam</span>
+        <span>Trompet</span>
       </div>
     </div>
 
@@ -60,11 +117,17 @@
       </div>
       <div class="team-title">
         <h5>Davis</h5>
-        <span>Planner in Shanghai</span>
+        <span>Guitar</span>
       </div>
     </div>
   </div>
 </div>
+
+
+
+
+
+
 
 
 
