--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,11 +1,11 @@
 <div class="banner" >
-  <div class='slide1' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("photo-band.png") %>');">
+  <div class='slide1' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_url('photo-band.png') %>)">
   </div>
 
-  <div class='slide2' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= asset_path("photo-singer.jpeg") %>');">
+  <div class='slide2' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_url('photo-singer.jpeg') %>)">
   </div>
 
-  <div class='slide3' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),  url('<%= asset_path("concert.png") %>');">
+  <div class='slide3' style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),  url(<%= image_url('concert.png') %>)">
   </div>
 
   <div class="banner-content">
