--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,6 +36,8 @@
         <%= f.input :banner %>
         <%= f.input :banner_cache, as: :hidden %>
 
+        <%= f.input :media %>
+
 
         <%#= f.select :instrument, options_for_select(%w[Mike Nick Jason Tim]) %>
         <%#= f.input :instrument, :collection => %w[Mike Nick Jason Tim] %>
