--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -21,7 +21,15 @@
 
    <div class="col-sm-4">
     <h4> <%= @musician.city %>, <%= @musician.country %></h4>
+
+
+
+    <%= link_to "Edit profile", edit_user_registration_path(@user), class: "btn btn-primary btn-lg" %>
+      <br>
+      <%= link_to "Delete", user_registration_path(@user), class: "btn btn-primary btn-lg", method: :delete,
+        data: { confirm: "Are you sure?" } %>
   </div>
+
 
 
   <div class="col-sm-7">
