--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
 
 
       <%= link_to "Create a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Messages: #{Message.where.not(user: current_user).where(read: false).count}", conversations_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Connection requests: #{current_user.pending_friends.length}", connections_path, class: "navbar-wagon-item navbar-wagon-link"%>
 
 
