Feature works for both musicians and projects :), styling sucks.

--- a/app/views/musicians/_cards.html.erb
+++ b/app/views/musicians/_cards.html.erb
@@ -1,18 +1,27 @@
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <!-- MiniPreview stuff here -->
+  <script type="text/javascript">
+    $(function() {
+                $('#ccc a').miniPreview({ prefetch: 'pageload' });
+            });
+  </script>
+
 <div class="container">
   <div class="row">
     <% @musicians.each do |musician| %>
       <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(musician.avatar)%>');">
+        <div id="ccc" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(musician.avatar)%>');">
           <div class="card-description">
             <h2><%= musician.first_name + " " + musician.last_name %></h2>
             <p><%= musician.instrument %></p>
           </div>
 
           <%#= cl_image_tag ...photo, class: "card-user" %>
-          <%= link_to "#", musician_path(musician), class: "card-link" %>
+          <%= link_to "", musician_path(musician), class: "card-link" %>
         </div>
       </div>
     <% end %>
   </div>
 </div>
+
 
