--- a/app/views/projects/_cards.html.erb
+++ b/app/views/projects/_cards.html.erb
@@ -1,9 +1,16 @@
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <!-- MiniPreview stuff here -->
+  <script type="text/javascript">
+    $(function() {
+                $('#ccc a').miniPreview({ prefetch: 'pageload' });
+            });
+  </script>
 
 <div class="container">
   <div class="row">
     <% @projects.each do |project| %>
       <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(project.picture)%>');">
+        <div id="ccc" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(project.picture)%>');">
 
           <div class="card-description">
             <h2><%= project.title.capitalize %></h2>
@@ -12,7 +19,7 @@
           <img class="card-user" src="">
           <%#= cl_image_tag @project.user.avatar, width: 100, height: 100, crop: :fill , class:"card-user"%>
 
-          <%= link_to "#", project_path(project), class: "card-link" %>
+          <%= link_to "", project_path(project), class: "card-link" %>
         </div>
       </div>
     <% end %>
