--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 
 <!-- Header with Background Image -->
-
+<div class="wrapper">
 <div class="banner banner-profile" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
   <div class="banner-content">
     <h1><%= @project[:title] %></h1>
@@ -14,55 +14,79 @@
     t.string "location" -->
 
     <!-- Page Content -->
-    <div class="container">
-      <div class="row">
-       <div class="col-sm-4">
-        <h2 class="mt-4">When:</h2>
-        <ul class="no-deco">
-          <li>Starts: <%= @project.start_time %></li>
-          <li>Ends: <%= @project.end_time %></li>
-          <li>Location: <%= @project.location %></li>
-          <!-- <li><%= cl_image_tag(@project.user.avatar) %></li> -->
-        </ul>
-        <h2 class="mt-4">We are:</h2>
-        <ul class="no-deco">
+    <div class="content-projects">
+      <div class="project-left">
+
+
+       <h2 class="mt-4">Project:</h2>
+       <p><%= @project[:description] %></p>
+
+
+
+       <h2 class="mt-4">When:</h2>
+       <ul class="no-deco">
+        <li>Starts: <%= @project.start_time %></li>
+        <li>Ends: <%= @project.end_time %></li>
+        <li>Location: <%= @project.location %></li>
+        <!-- <li><%= cl_image_tag(@project.user.avatar) %></li> -->
+      </ul>
+
+      <% if current_user == @project.user %>
+      <p>
+        <%= link_to "Edit", edit_project_path(@project), class: "btn btn-primary btn-lg" %>
+        <%= link_to "Delete", project_path(@project), class: "btn btn-primary btn-lg", method: :delete,
+        data: { confirm: "Are you sure?" } %></p>
+        <% else %>
+        <p><%= link_to "Join the project", project_participants_path(@project) , method: :post, class: "btn btn-primary btn-lg" %></p>
+        <% end %>
+
+
+      </div>
+
+      <div class="project-right">
+
+
+
+        <!--  <p><%#= link_to "New Comment", new_project_comment_path(@project) %></p> -->
+
+
+         <div>
           <%= link_to musician_path(@project.user) do  %>
-          <li ><%= cl_image_tag @project.user.avatar, width: 100, height: 100, crop: :fill , class: "participant"  %></li>
-          <% end %>
-        </ul>
-        <% @participants.each do |participant| %>
-        <ul class="no-deco">
+
+            <%= cl_image_tag @project.user.avatar, width: 100, height: 100, crop: :fill , class: "participant"  %>
+            <% end %>
+
+          <% @participants.each do |participant| %>
           <%= link_to musician_path(participant.user) do  %>
+
+
+            <%= cl_image_tag participant.user.avatar, width: 100, height: 100, crop: :fill , class: "participant" %>
+
+
+          <% end %>
+          <% end %>
+          </div>
+
+
+        <%= render 'comments/form' %>
+        <ul class="no-deco">
+          <% @comments.each do |comment| %>
           <li >
             <div>
-              <%= cl_image_tag participant.user.avatar, width: 100, height: 100, crop: :fill , class: "participant" %>
+              <%= comment.content %>
             </div>
           </li>
           <% end %>
         </ul>
-      <% end %>
 
-      </div>
-      <div class="col-sm-8">
-        <h2 class="mt-4">Project:</h2>
-        <p><%= @project[:description] %></p>
+        <!--  <p><%#= link_to "Back to projects", projects_path %></p> -->
 
-        <% if current_user == @project.user %>
-        <p>
-          <%= link_to "Edit", edit_project_path(@project), class: "btn btn-primary btn-lg" %>
-          <%= link_to "Delete", project_path(@project), class: "btn btn-primary btn-lg", method: :delete,
-          data: { confirm: "Are you sure?" } %></p>
-          <% else %>
-          <p><%= link_to "Join the project", project_participants_path(@project) , method: :post, class: "btn btn-primary btn-lg" %></p>
-          <% end %>
-
-          <p><%= link_to "New Comment", "#" %></p>
-          <p><%= link_to "Back to projects", projects_path %></p>
-
-        </div>
 
       </div>
     </div>
+    </div>
+
+
 
 
 
