styled buttons connections

--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -2,7 +2,9 @@
 
 .participant {
   border-radius: 50%;
-  background: transparent;
+  border: solid #d3d0cb 2px;
+  // background: transparent;
+
 }
 
 .no-deco li {
