--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,9 +4,9 @@
 $body-font: "Rajdhani", "sans-serif";
 $headers-font: "Rajdhani", "sans-serif";
 
-// h1 h2 h3 h4 {
-//    font-weight: bold;
-// }
+h2 {
+   font-weight: bold !important;
+}
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
