--- a/app/assets/stylesheets/musicians/_show.scss
+++ b/app/assets/stylesheets/musicians/_show.scss
@@ -15,7 +15,7 @@
   // flex-direction: column;
   justify-content: flex-end;
   align-items: left;
-  height: 300px;
+  height: 250px;
   background-position:0px 0px;
   border-bottom: solid #ef4343 4px;
 }
@@ -44,6 +44,7 @@
 .profile-info-left{
   flex: 0 0 350px;
   margin-left:70px;
+  margin-top: 30px;
 }
 .profile-info-right{
   margin-right:70px;
@@ -55,7 +56,8 @@
   border-bottom: solid #ef4343 4px;
   padding: 30px;
   border-radius: 15px;
-  color:  #0a2239;;
+  color:  #0a2239;
+
 }
 
 .skills{
