--- a/app/views/connections/_connection_button.html.erb
+++ b/app/views/connections/_connection_button.html.erb
@@ -1,7 +1,12 @@
   <div class="conecting">
     <% if  @musician.friends_with?(current_user) %>
-      <p>You are already connected!</p>
-      <p><%= link_to "Remove connection", remove_musician_path(@musician) , class: "btn btn-primary btn-lg" %></p>
+      <!-- <p>You are already connected!</p> -->
+      <p>
+        <%= link_to remove_musician_path(@musician) do%>
+          <span>Remove connection  </span><i class="fa fa-times-circle"></i>
+        <% end %>
+
+      </p>
     <%elsif @musician.pending_friends.include?(current_user)%>
       <p>You are pending connection!</p>
       <p><%= link_to "Remove connection", remove_musician_path(@musician) , class: "btn btn-primary btn-lg" %></p>
@@ -14,8 +19,15 @@
     <%end%>
     <!-- btn block use only works if firends -->
     <% if  @musician.friends_with?(current_user) %>
-      <p><%= link_to "BLOCK", block_musician_path(@musician) , class: "btn btn-primary btn-lg" %></p>
+      <p><%= link_to block_musician_path(@musician) do%>
+  <span>Block  </span><i class="fa fas fa-ban"></i>
+  <% end %></p>
     <% elsif  current_user.blocked_friends.include?(@musician) %>
-    <p><%= link_to "UNBLOCK", unblock_musician_path(@musician) , class: "btn btn-primary btn-lg" %></p>
+    <p><%= link_to "UNBLOCK", unblock_musician_path(@musician) , class: "" %></p>
     <%end%>
   </div>
+
+
+
+
+
