--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background: #3c4858;
-  border-top: solid #ef4343;
+  border-top: solid #ef4343 1px;
   display: flex;
   align-items: center;
   justify-content: space-between;
