--- a/app/assets/stylesheets/musicians/_show.scss
+++ b/app/assets/stylesheets/musicians/_show.scss
@@ -17,7 +17,9 @@
   align-items: left;
   height: 250px;
   background-position:0px 0px;
-  border-bottom: solid #ef4343 4px;
+  border-bottom: solid #ef4343 1px;
+  background-size: cover !important;
+
 }
 
 .avatar-profile{
@@ -25,8 +27,9 @@
   margin-left: 50px;
   margin-right: 30px;
   // border-radius: 50%;
+  // border: solid #ef4343 2px;
 
-  border: solid #ef4343 4px;
+  border: solid #d3d0cb 2px;
   border-radius: 15px;
 
 }
@@ -45,6 +48,7 @@
   flex: 0 0 350px;
   margin-left:70px;
   margin-top: 30px;
+
 }
 .profile-info-right{
   margin-right:70px;
@@ -52,8 +56,8 @@
 
 .about-content{
   background-color: white;
-  border-right: solid #ef4343 4px;
-  border-bottom: solid #ef4343 4px;
+  border-right: solid #ef4343 2px;
+  border-bottom: solid #ef4343 2px;
   padding: 30px;
   border-radius: 15px;
   color:  #0a2239;
