added some changes to messages frontend

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -1,4 +1,4 @@
-body { padding-top:30px; }
+body { padding-top:30px;}
 .widget .panel-body { padding:0px; }
 .widget .list-group { margin-bottom: 0; }
 .widget .panel-title { display:inline }
@@ -39,4 +39,10 @@ body { padding-top:30px; }
 .message-btns {
   margin-right: 5px;
   margin-top: 5px;
+}
+
+.panel {
+  margin: 20px 20px;
+  padding: 10px 20px;
+
 }
