--- a/app/views/musicians/_cards.html.erb
+++ b/app/views/musicians/_cards.html.erb
@@ -6,7 +6,7 @@
             });
   </script>
 
-<div class="container">
+<div class="container card-container">
   <div class="row">
     <% @musicians.each do |musician| %>
       <div class="col-xs-12 col-sm-4">
