--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,7 +1,7 @@
-<h1 class="text-center">This is the result of your search:
-</h1>
+<h1 class="text-center">This is the result of your search:</h1>
 
 
-<%= render 'musicians/cards' %>
-<%= render 'projects/cards' %>
+      <%= render 'musicians/cards' %>
+      <%= render 'projects/cards' %>
+
 
