--- a/app/views/projects/_cards.html.erb
+++ b/app/views/projects/_cards.html.erb
@@ -6,10 +6,10 @@
             });
   </script>
 
-<div class="container">
+<div class="container card-container">
   <div class="row">
     <% @projects.each do |project| %>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col-xs-10 col-sm-4">
         <div id="ccc" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(project.picture)%>');">
 
           <div class="card-description">
