--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,7 +1,5 @@
-<h1 class="text-center">This is the result of your search:</h1>
-
-
-      <%= render 'musicians/cards' %>
-      <%= render 'projects/cards' %>
-
-
+<div class=results-container>
+  <h1 class="text-center">This is the result of your search:</h1>
+   <%= render 'musicians/cards' %>
+   <%= render 'projects/cards' %>
+</div>
