changes in the style

--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -6,7 +6,7 @@
       %>
   <%= text_field_tag :location,
     params[:query],
-    class: "form-control form-control-lg",
+    class: "form-control search",
       placeholder: "Ex: Amsterdam"
       %>
   <%= submit_tag "Find", class: "btn btn-primary" %>
