changes for searchbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 // Your CSS partials
 @import "layouts/index";
 @import "components/index";
+@import "components/search_bar";
 @import "pages/index";
 @import "musicians/index";
 @import "projects/index";
